# InvestAlfa

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
_investalfa/: asgi.py  settings.py  urls.py  wsgi.py
client/: package.json
client/src/: App.tsx  routes.tsx
client/src/hooks/: useUser.ts
client/src/services/: api.ts
client/src/styles/: _colors.scss  global.scss
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_last_quote.py  0004_company_max_quote_company_min_quote_and_more.py
docs/: docusaurus.config.js  package-lock.json
docs/src/pages/: index.js
docs/static/ref/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  investalfa.apps.auth.apps.AuthConfig.html  investalfa.apps.auth.apps.html  investalfa.apps.auth.html  investalfa.apps.auth.migrations.html  investalfa.apps.auth.models.html  investalfa.apps.auth.tests.html  investalfa.apps.auth.urls.html  (+90 more)
investalfa/: __init__.py  asgi.py  client.py  settings.py  urls.py  wsgi.py
investalfa/apps/: __init__.py
investalfa/client/: .env  .gitignore  package.json
monitoring/: comparator.py  models.py  sender.py  urls.py  views.py
monitoring/migrations/: 0001_initial.py  0002_monitoring_last_notification.py
monitoring/templates/: email.html
quotes/: apps.py  data.py  models.py  scheduler.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
scripts/: __init__.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0002_alter_customuser_email.py  0003_rename_uid_customuser_id.py  0005_alter_customuser_uid.py
(+68 files in other folders)
