[tool.poetry]
name = "investalfa"
version = "0.1.0"
description = "Sistema para auxiliar um investidor nas suas decisões de compra/venda de ativos"
authors = ["Gustavo Simões <gustavosimoesmendonca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
