[tool.poetry]
name = "investalfa"
version = "0.1.0"
description = "Sistema para auxiliar um investidor nas suas decisões de compra/venda de ativos"
authors = ["Gustavo Simões <gustavosimoesmendonca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
djangorestframework = "^3.13.1"
APScheduler = "^3.9.1"
pytz = "^2022.2.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pydoctor = "^22.7.0"

[tool.poetry.scripts]
docs = "scripts:docs"
start = "scripts:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
